<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PokeBar</string>
    <string name="InfoText">Click on the Pokeball to add Pokemon to your Pokedex</string>
    <string name="POTDTitle" tools:ignore="">"Today, the shiny pokemon is ..."</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login page -->
    <string name="LTitle">Welcome back trainer !</string>
    <string name="LPwdText">Password</string>
    <string name="LMailText">E-mail</string>
    <string name="LRegister"><u>Register</u></string>
    <string name="LLogin">Login</string>
    <string name="LReset">Reset</string>
    <string name="NoAccount">No account yet ?</string>

    <!-- Register page -->
    <string name="gotAccount">Already an account ?</string>
    <string name="RLogin"><u>Log in</u></string>
    <string name="RRegister">Register</string>
    <string name="RTitle">Register Now !</string>
    <string name="RNameText">Name</string>
    <string name="REmailText">Email</string>
    <string name="RPwdText">Password</string>

    <!-- POTD message -->
    <string name="PopTitle">What is the Pokemon of the day ?</string>
    <string name="POTDNale">It\'s</string>

    <!-- Add Bar page -->
    <string name="ABTitle">Add your Bar to the map !</string>
    <string name="ABBarName">L\'Escale</string>
    <string name="ABBarTtile">Bar name here</string>
    <string name="ABDescriptionTitle">Small description here</string>
    <string name="ABDescription">Small description talking about the bar</string>
    <string name="ABStreetTitle">Street &amp; N° here</string>
    <string name="ABStreet">Bd Roosevelt 26</string>
    <string name="ABCityTitle">City name here</string>
    <string name="ABCity">Soignies</string>
    <string name="ABCountryTitle">Country here</string>
    <string name="ABCountry">Belgium</string>

    <!-- DownloadPokemon page -->
    <string name="DPTitle">The Pokemon in your bar will be ...</string>
    <string name="DPQrPersoDesc">Click on the ? to make your custom QrCode appear !</string>
</resources>